@@ -1,3 +1,7 @@
+2024-12-29  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* Added sample_softbody.rb
+
 2024-12-22  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* https://github.com/erincatto/box2d/commit/f377034920c42a26cd498c0a0b1b2e9f2b064989
